--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.profiles.active=test 
+
+default.sender=emailparatestessistemas@gmail.com
+default.recipient=emailparatestessistemas@gmail.com
+
