--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,16 @@ spring.datasource.url=mysql://bdd48db92baf68:2ffb8f11@us-cdbr-iron-east-05.clear
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+
+#Configurações de email
+spring.mail.host=smtp.gmail.com
+#Adicionar email que ira efetuar o envio, junto com o password. Liberando as configuraçoes nos links:
+#https://www.google.com/settings/security/lesssecureapps e https://accounts.google.com/b/0/DisplayUnlockCaptcha
+spring.mail.username=emailparatestessistemas
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
