--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,4 +5,6 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.mail.host: 127.0.0.1
+
 
