Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.profiles.active=test
 default.sender=emailparatestessistemas@gmail.com
 default.recipient=emailparatestessistemas@gmail.com
 
+jwt.secret=sequenciaDeCaracteresParaAssinarToken
+jwt.expiration=60000
