--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,10 @@ default.sender=emailparatestessistemas@gmail.com
 default.recipient=emailparatestessistemas@gmail.com
 
 jwt.secret=sequenciaDeCaracteresParaAssinarToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-ionic-thiago
+s3.region=sa-east-1
+
