--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,30 @@
     "name": "jwt.expiration",
     "type": "java.lang.String",
     "description": "A description for 'jwt.expiration'"
+  },
+  {
+    "name": "img.prefix.client.profile",
+    "type": "java.lang.String",
+    "description": "A description for 'img.prefix.client.profile'"
+  },
+  {
+    "name": "s3.region",
+    "type": "java.lang.String",
+    "description": "A description for 's3.region'"
+  },
+  {
+    "name": "s3.bucket",
+    "type": "java.lang.String",
+    "description": "A description for 's3.bucket'"
+  },
+  {
+    "name": "aws.secret_access_key",
+    "type": "java.lang.String",
+    "description": "A description for 'aws.secret_access_key'"
+  },
+  {
+    "name": "aws.access_key_id",
+    "type": "java.lang.String",
+    "description": "A description for 'aws.access_key_id'"
   }
 ]}
