--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -43,5 +43,10 @@
     "name": "aws.access_key_id",
     "type": "java.lang.String",
     "description": "A description for 'aws.access_key_id'"
+  },
+  {
+    "name": "img.profile.size",
+    "type": "java.lang.String",
+    "description": "A description for 'img.profile.size'"
   }
 ]}
